<resources>
    <string name="app_name">One Love</string>
    <string name="foreground_icon">foreground_icon</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">SIGN UP</string>
    <string name="cancel">CANCEL</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="user_full_name">Full Name</string>
    <string name="user_user_name">Username</string>
    <string name="user_location">Location</string>
    <string name="user_age">Age</string>
    <string name="user_agepref">Age Preference</string>
    <string name="user_about">About</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_email">Enter Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="edit">EDIT</string>
    <string name="tfe_tc_edit_text_hint" translatable="false">Enter a text.</string>
    <string name="tfe_tc_button_ok" translatable="false">Predict</string>
    <string name="enter_twitter_username">Enter Twitter Username</string>

    <string name="hyperlink">If you do not have twitter account\n<a href="https://www.truity.com/test/type-finder-personality-test-new">Check Personality Type here</a></string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>